Fix whitespace in css files

--- a/app/assets/stylesheets/api/carts.scss
+++ b/app/assets/stylesheets/api/carts.scss
@@ -14,7 +14,6 @@
 }
 
 .item-count {
-
   font-size: 24px;
   margin-top: -15px;
   margin-bottom: 15px;
@@ -44,7 +43,6 @@
 .cart-item{
   display: flex;
   align-items: center;
-
 }
 
 .photo-col {
@@ -211,7 +209,6 @@
   background-color: white;
   border: 1px solid  #E1E3DF;
   border-radius: 3px;
-  font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
